Adding OpenTelemetry configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=petclinic
+spring.sleuth.otel.exporter.otlp.endpoint=http://10.64.194.250:4317
+
 # database init, supports mysql too
 database=h2
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
@@ -17,9 +20,13 @@ spring.messages.basename=messages/messages
 management.endpoints.web.exposure.include=*
 
 # Logging
+logging.level=INFO
+logging.level.io.opentelemetry=DEBUG
 logging.level.org.springframework=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg traceID=%X{trace_id} %n
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
+
