--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -7,13 +7,11 @@ on:
   push:
     branches: [ blackops ]
   pull_request:
-    branches: [ main ]
+    branches: [ blackops ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -23,4 +21,37 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Build with Maven Wrapper
-        run: ./mvnw -B package
+        run: ./mvnw -B package   
+    
+  kustomize:
+    name: Update Image on Kustomize
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          repository: intelipost/intelipost-deploy-eks
+          path: intelipost-deploy-eks
+      
+      - name: kustomize
+        uses: imranismail/setup-kustomize@v1
+        with:
+          kustomize_version: v3.6.1
+      
+      - name: update k8s
+        run: |
+          kustomize edit set image intelipost/intelipost-deploy-eks:${{ github.sha }}
+          working-directory: ./intelipost-deploy-eks/overlays/qa
+          cat kustomization.yaml
+      
+      - name: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Deploy Action"
+          git commit -am "change image tag"
+      - name: push
+        uses: ad-m/github-push-action@master
+    
+    
+    
