--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: intelipost/intelipost-deploy-eks
+          token: ${{ secrets.GH_PAT }}
           ref: master
           path: intelipost-deploy-eks
       
