--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -13,7 +13,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout application repository
       - uses: actions/checkout@v2
+        with: 
+            path: application
+      - name: checkout deploy repository
+        uses: actions/checkout@v3
+        with:
+          repository: intelipost/intelipost-deploy-eks
+          path: deploy
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -21,39 +29,9 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Build with Maven Wrapper
-        run: ./mvnw -B package   
-    
-  kustomize:
-    name: Update Image on Kustomize
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-        with:
-          repository: intelipost/intelipost-deploy-eks
-          token: ${{ secrets.GH_PAT }}
-          ref: master
-          path: intelipost-deploy-eks
-      
-      - name: kustomize
-        uses: imranismail/setup-kustomize@v1
-        with:
-          kustomize_version: v3.6.1
-      
-      - name: update k8s
         run: |
-          kustomize edit set image intelipost/intelipost-deploy-eks:${{ github.sha }}
-          working-directory: ./intelipost-deploy-eks/overlays/qa
-          cat kustomization.yaml
-      
-      - name: commit
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "Deploy Action"
-          git commit -am "change image tag"
-#      - name: push
-#        uses: ad-m/github-push-action@master
+          cd application
+          ./mvnw -B package   
     
     
     
