--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout application repository
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with: 
             path: application
       - name: checkout deploy repository
