--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=petclinic
-spring.sleuth.otel.exporter.otlp.endpoint=http://10.64.194.250:4317
+spring.application.name=spring-petclinic
+#spring.sleuth.otel.exporter.otlp.endpoint=http://10.64.194.250:4317
 
 # database init, supports mysql too
 database=h2
@@ -21,8 +21,8 @@ management.endpoints.web.exposure.include=*
 
 # Logging
 logging.level=INFO
-logging.level.io.opentelemetry=DEBUG
 logging.level.org.springframework=INFO
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg traceID=%X{trace_id} %n
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
@@ -30,3 +30,4 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg traceID=%X{
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
 
+management.metrics.tags.application=spring-petclinic
